[metadata]
name = gnocchi-nagios
summary = Gnocchi-nagios allows to push Nagios perfdata to Gnocchi
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
home-page = https://github.com/sileht/gnocchi-nagios
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    gnocchi_nagios

[entry_points]
console_scripts =
    gnocchi-nagios = gnocchi_nagios.cli:main

oslo.config.opts =
    gnocchi-nagios = gnocchi_nagios.opts:list_opts
    gnocchi-nagios-auth = gnocchi_nagios.opts:list_keystoneauth_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gnocchi_nagios/locale
domain = gnocchi_nagios

[update_catalog]
domain = gnocchi_nagios
output_dir = gnocchi_nagios/locale
input_file = gnocchi_nagios/locale/gnocchi_nagios.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gnocchi_nagios/locale/gnocchi_nagios.pot

[wheel]
universal = 1
